fix: don't use sass variables for spacing in hover preview -- it makes it buggy.

--- a/_sass/includes/_tooltip.scss
+++ b/_sass/includes/_tooltip.scss
@@ -6,7 +6,7 @@
     @include fs-2;
     z-index: 5;
     background: $body-background-color;
-    padding: $sp-6;
+    padding: 2em; // don't use sass spacing variables -- it makes hover preview buggy.
     border: 1px solid $border-color;
     border-radius: 15px;
     overflow: hidden;
